# api-4-built-environment

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py
api4be/: __init__.py  config.py
api4be/components/: cache.py
api4be/components/models/: spatial_tree.py
api4be/components/repositories/: ifc_file_repository.py
api4be/components/routes/: __init__.py  bim_routes.py  gim_routes.py
api4be/components/serializer/: bim_deserializer.py  bim_serializer.py  gim_serializer.py
api4be/components/service/: bim_model_service.py
api4be/components/utils/: geom_utils.py  georef_utils.py  gltf_utils.py  guid_utils.py  logging_utils.py  routes_utils.py  spatial_tree_utils.py
api4be/data/pim/: duplex.ifc  duplex.json
api4be/ifcjson/: __init__.py  common.py  ifc2json4.py  ifc2json5a.py  reader.py  to_ifcopenshell.py
api4be/static/js/bootstrap/: bootstrap-table-treegrid.min.js
api4be/templates/: base.html  index.html  json.html
api4be/templates/bim/: geom.html  item.html
api4be/templates/gim/: item.html
tests/: test_bim_routes.py  test_gim_routes.py  test_guid_utils.py
tests/resources/bimapi/bim/collections/pim/projects/: duplex.json
tests/resources/bimapi/bim/collections/pim/projects/duplex/: geometry%3Fcomposed%3Dtrue.json  geometry.json  georef.json  tree.json
tests/resources/bimapi/gim/collections/pim/: items.json
tests/resources/bimapi/gim/collections/pim/items/: duplex%3A7b7032cc-b822-417b-9aea-6429f95d6512%3Fcomposed%3Dfalse.json  duplex%3A7b7032cc-b822-417b-9aea-6429f95d6512.json  duplex.json
(+7 files in other folders)
